# kinetools

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  requirements.sys  requirements.txt
docker/: build.sh  devel.sh  dockerfile
examples/: CMakeLists.txt
examples/src/: cppad_exp1.cpp  cppad_exp2.cpp  dh_matrices.cpp  eigen_array.cpp  get_started.cpp  jacobian.cpp  scara.cpp  scara_inverse.cpp  scara_jacobian.cpp
include/kinetools/: jacobian.hpp  kinetools.hpp  utility.hpp
include/kinetools/jacobian/: cppad.hpp
include/kinetools/joints/: eigen.hpp
include/kinetools/models/eigen/: scara.hpp
tests/: CMakeLists.txt
tests/src/: test_eigen_cppad_jacobian.cpp  test_eigen_kinematics.cpp
